--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   sqflite: ^2.2.8+4
   image_picker: ^1.0.1
   dart_openai: ^4.0.0
+  envied: ^0.3.0+3
 
 dev_dependencies:
   flutter_test:
